fix layout issues

--- a/src/modules/smart-alpha/views/deposit-view/s.module.scss
+++ b/src/modules/smart-alpha/views/deposit-view/s.module.scss
@@ -1,5 +1,5 @@
 .depositBalance {
-  background: #f8f8f9;
+  background: var(--theme-body-color);
   border-radius: 4px;
   padding: 24px;
 }
